Text wrap fix

--- a/app/assets/stylesheets/portfolio.scss
+++ b/app/assets/stylesheets/portfolio.scss
@@ -21,9 +21,10 @@
         span {
           border-radius: 3px;
           padding: 6px 15px 9px;
-          background: #5D9CEC;
+          background: #2e4e76;
           font-weight: 300;
           color: #fff;
+          white-space: nowrap;
 
           i {
             display: inline-block;
